[package]
name = "create-window"
version = "0.0.0"
edition = "2018"

[dependencies.windows]
version = "0.29"
git = "https://github.com/ricobbe/windows-rs.git"
branch = "raw-dylib-on-0.29.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
